# wsc2025

./: .gitignore  Makefile  README.md  Untitled.ipynb  docker-compose.yaml  justfile  make_instance.py  pyproject.toml
grafana/provisioning/dashboards/: dashboard.json  default.yaml
grafana/provisioning/datasources/: datasource.yaml
model_repository/ensemble_torch/: config.pbtxt
model_repository/ensemble_trt/: config.pbtxt
model_repository/gemma_torch/: config.pbtxt
model_repository/gemma_torch/1/: model.py
model_repository/postprocessing/: config.pbtxt
model_repository/postprocessing/1/: model.py
model_repository/preprocessing/: config.pbtxt
model_repository/preprocessing/1/: model.py
model_repository/tensorrt_llm/: config.pbtxt
packer/: base.pkr.hcl
prometheus/: prometheus.yaml
