[project]
name = "wsc2025"
version = "0.1.0"
description = "Web Summer Camp 2025 workshop on serving LLMs in production from the first principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "fastapi>=0.115.8",
    "jupyterlab>=4.3.5",
    "numpy>=2.2.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "uvicorn>=0.34.0",
]
