[project]
name = "wsc2025"
version = "0.1.0"
description = "Web Summer Camp 2025 workshop on serving LLMs in production from the first principles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "fastapi>=0.115.4",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "jupyterlab-unfold>=0.3.4",
    "sentencepiece>=0.2.0",
    "tensorrt-llm==0.20.0",
    "torch>=2.6.0",
    "uvicorn>=0.34.3",
]

[[tool.uv.index]]
url = "http://pypi.nvidia.com/"
